fixing jumping on ios

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+html, body {
+    height: 100%;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
 body {
 	margin-top: 10px;
 }
